    works on these.
17. Add support for comments. These are read directly from the song file when
    the tag-editor is used, and they are NOT saved in Cantata's cache file.
18. Install Cantata's list of lyrics providers to INSTALL/share/cantata/lyrics
19. Read lyrics providers from each .xml file in ~/.local/share/cantata/lyrics,
    and INSTALL/share/cantata/lyrics

1.3.2
-----
1. In cover/artist dialog, when attempting to save an image into Cantata's
   cache folder - ensure the 'covers' sub-folder is created.
2. When saving artist image from cover dialog, if set to save in MPD folder and
   song's path does not have 2 folder elements then save in cache folder.
   Cantata will only save artist images, and backdrops, in MPD folder if the
   folder structure is (e.g.) Artist/Album/Track.mp3
3. Use case-insensitive sort of folder view items when adding to playqueue.
4. When determining the 'basic' artist of a track, if albumartist is set and
   artist is not, then use albumartist.
5. For the web-links in the context view, replace ampersand and question mark
   characters in artist names with the relevant URL encoding.
6. Use CMake to locate X11 libraries and headers.

1.3.1
-----
 1. Fix collapsed context-view selector buttons text when using a dark
    background.
 2. Apply some Fedora patches.
 3. Fix MPD HTTP stream playback.
 4. Fix painting of Gtk thin scrollbar style on comboboxes.
 5. When waiting for replies from MPD, use Qt's standard timeout value of 30showMopidyMessage
    While the socket is still connected, Cantata will wait up to 4 times the
    timeout value. Therefore, the actual timeout has increased to 2minutes!
 6. If a sidebar view has focus, but sidebar is collapsed, then find action
    should activate playqueue search widget.
 7. FreeBSD 10 compile fixes.
 8. Fix scaling of context view background when size of view changes.
 9. Elide text of context view selector buttons, if insufficient space.