@@ -142,15 +142,25 @@
        </spacer>
       </item>
       <item row="0" column="11">
-       <widget class="ToolButton" name="songInfoButton"/>
-      </item>
-      <item row="0" column="12">
-       <widget class="MenuButton" name="menuButton"/>
+       <layout class="QHBoxLayout" name="controlButtonLayout">
+        <property name="spacing">
+         <number>0</number>
+        </property>
+        <property name="margin">
+         <number>0</number>
+        </property>
+        <item>
+         <widget class="ToolButton" name="songInfoButton"/>
+        </item>
+        <item>
+         <widget class="MenuButton" name="menuButton"/>
+        </item>
+       </layout>
       </item>
       <item row="1" column="0" colspan="6">
        <widget class="QWidget" name="toolbarSpacerA"/>
       </item>
-      <item row="1" column="7" colspan="6">
+      <item row="1" column="7" colspan="5">
        <widget class="QWidget" name="toolbarSpacerB"/>
       </item>
      </layout>
