@@ -783,23 +783,27 @@ bool Utils::isHighDpi()
     return fontHeight>22;
 }
 
-#if !defined Q_OS_WIN32 && !defined Q_OS_MAC
 Utils::Desktop Utils::currentDe()
 {
-    QByteArray desktop=qgetenv("XDG_CURRENT_DESKTOP").toLower();
-    if ("unity"==desktop) {
-        return Unity;
+    #if !defined Q_OS_WIN32 && !defined Q_OS_MAC
+    static int de=-1;
+    if (-1==de) {
+        de=Other;
+        QByteArray desktop=qgetenv("XDG_CURRENT_DESKTOP").toLower();
+        if ("unity"==desktop) {
+            de=Unity;
+        } else if ("kde"==desktop) {
+            de=KDE;
+        } else if ("gnome"==desktop) {
+            de=Gnome;
+        } else {
+            QByteArray kde=qgetenv("KDE_FULL_SESSION");
+            if ("true"==kde) {
+                de=KDE;
+            }
+        }
     }
-    if ("kde"==desktop) {
-        return KDE;
-    }
-    if ("gnome"==desktop) {
-        return Gnome;
-    }
-    QByteArray kde=qgetenv("KDE_FULL_SESSION");
-    if ("true"==kde) {
-        return KDE;
-    }
+    return (Utils::Desktop)de;
+    #endif
     return Other;
 }
-#endif
