@@ -27,6 +27,11 @@
 18. Install Cantata's list of lyrics providers to INSTALL/share/cantata/lyrics
 19. Read lyrics providers from each .xml file in ~/.local/share/cantata/lyrics,
     and INSTALL/share/cantata/lyrics
+20. Attempt to respect menubar usage of current desktop. For windows and Gnome,
+    menu button is used, and menubar hidden. For Mac and Unity, menubar is
+    used, and menu button is hidden. For KDE, by default the menu button is
+    used, and the menu bar hidden - but a menu entry is provided to toggle.
+    This setting maybe overridden - see README for details.
 
 1.3.2
 -----
